--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   const srtUrl = "OAV2.srt";
 
   const tooltipDictionary = {
-    "Vascongadas": "Usado durante la dictadura franquista, en referencia a las provincias vascas, para eliminar el término ‘país’ del nombre de la región."
+    "Abertzale": "Nacionalistas vascos"
   };
 
   let subtitles = [];
