--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   const srtUrl = "OAV2.srt";
 
   const tooltipDictionary = {
-    "Abertzale": "Nacionalistas vascos"
+    "Abertzale": "Nacionalista vasco"
   };
 
   let subtitles = [];
