--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   const srtUrl = "OAV2.srt";
 
   const tooltipDictionary = {
-    "Abertzale": "Un nacionalista vasco"
+    "Abertzale": "Se traduce como «patriota», refiriéndose específicamente a los nacionalistas vascos."
   };
 
   let subtitles = [];
